--- a/index.html
+++ b/index.html
@@ -168,16 +168,16 @@
    <div class="connect" >
     <div class="footerimg">
       <div class="icons">
-          <a href="tel:+1234567899"><img src="./Images/phone.png" alt=""></a>
-  <a href="tel:+1234567899"><img src="./Images/phone2.png" alt=""></a>
+          <a href="tel:+1234567899"><img src="images/phone.png" alt=""></a>
+  <a href="tel:+1234567899"><img src="images/phone2.png" alt=""></a>
       </div>
       <div class="icons">
-          <a href="tel:+1234567899"><img src="./Images/whatsapp.png" alt=""></a>
-  <a href="tel:+1234567899"><img src="./Images/wa.png" alt=""></a>
+          <a href="tel:+1234567899"><img src="images/whatsapp.png" alt=""></a>
+  <a href="tel:+1234567899"><img src="images/wa.png" alt=""></a>
       </div>
       <div class="icons">
-           <a href="mailto:sarisha0004@gmail.com"><img src="./Images/mail.png" alt=""></a>
-  <a href="mailto:sarisha0004@gmail.com"><img src="./Images/email2.png" alt=""></a>
+           <a href="mailto:sarisha0004@gmail.com"><img src="images/mail.png" alt=""></a>
+  <a href="mailto:sarisha0004@gmail.com"><img src="images/email2.png" alt=""></a>
       </div>
   </div>
         
