--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css"
     />
     <link rel="stylesheet" href="index.css" />
-    <title>Templato</title>
+    <title>EK</title>
   </head>
   <body>
     <header class="header">
